--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 .idea/kris-diaz.github.io.iml
 .idea/inspectionProfiles/Project_Default.xml
 .idea/inspectionProfiles/profiles_settings.xml
+/.idea
+.idea/workspace.xml
